--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -128,11 +128,12 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.horas"
+        applicationId "br.com.hygor.horas"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     splits {
         abi {
@@ -188,6 +189,9 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-vector-icons')
+    implementation project(':react-native-reanimated')
+    implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
@@ -198,6 +202,12 @@ dependencies {
     } else {
       implementation jscFlavor
     }
+
+    implementation project(':react-native-firebase')
+
+    implementation "com.google.android.gms:play-services-base:16.1.0"
+    implementation "com.google.firebase:firebase-core:16.0.9"
+    implementation "com.google.firebase:firebase-firestore:20.2.0"
 }
 
 // Run this once to be able to run the application with BUCK
@@ -208,3 +218,4 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+apply plugin: 'com.google.gms.google-services'
